Revert "Second attempt to fix ios flicker"
This reverts commit 35af0f799d3c776fa266a1fc80cdf334343e1856.

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -16,11 +16,6 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
-  background-color: var(--c-brand-black);
-  transform: trnaslate3d(0, 0, 0);
-}
-
 .wrapper {
   width: 100%;
   max-width: map-get($breakpoints, "2xl");
